add multi env
